--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -6,7 +6,9 @@ html {
 }
 
 
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   box-sizing: inherit;
 }
 
@@ -20,14 +22,15 @@ body {
   font-size: $font-med;
   color: $grayishBlue;
   line-height: 1.3;
-  pointer-events:auto;
+  pointer-events: auto;
 
 
-  &.no-scroll{
+  &.no-scroll {
     overflow: hidden;
   }
 
 }
+
 // Text
 h1,
 h2,
@@ -68,7 +71,9 @@ a:hover {
   text-decoration: none;
 }
 
-a, a:visited, a:hover {
+a,
+a:visited,
+a:hover {
   text-decoration: none;
   color: $grayishBlue;
 }
@@ -81,6 +86,27 @@ a, a:visited, a:hover {
 //  padding-left: 1.0625rem;
 //
 //}
+
+.large_text {
+  font-size: 42px;
+  margin-bottom: 20px;
+
+  @include breakpoint-down(meduim) {
+    font-size: 30px;
+    margin-bottom: 15px;
+  }  
+
+}
+
+.medium_text {
+  font-size: 25px; 
+  color: #5f5f5f;
+  overflow: hidden;
+
+  @include breakpoint-down(meduim) {
+    font-size: 24px;
+  }
+}
 
 
 .container {
@@ -159,10 +185,11 @@ a, a:visited, a:hover {
 }
 
 // Buttons
-button, .button {
+button,
+.button {
   padding: 1rem 1.875rem;
   background: #1785ea;
-  //background: linear-gradient(to right, $limeGreen, $brightCyan);
+  // background: linear-gradient(to right, #1785ea, $brightCyan);
   border-radius: 50px;
   border: 0;
   cursor: pointer;
@@ -173,6 +200,7 @@ button, .button {
 
 
 .hide-for-mobile {
+
   // Hide for Tablet and mobile
   @include breakpoint-down(meduim) {
     display: none;
@@ -181,6 +209,7 @@ button, .button {
 
 
 .hide-for-desktop {
+
   // Hide for Desktops viewport widths
   @include breakpoint-up(large) {
     display: none;
