--- a/app/scss/_headers.scss
+++ b/app/scss/_headers.scss
@@ -1,5 +1,8 @@
 .header {
 
+    border-bottom: solid 1px #dff0ff;
+    background: #ecf6ff;
+
 
   .overlay {
     opacity: 0;
@@ -42,7 +45,6 @@
   }
 
   nav { 
-  
     padding-right: 1.5rem;
     padding-left: 1.5rem;
     padding-top: 1.0625rem ;
@@ -103,8 +105,13 @@
       font-weight: 500;
       text-align: center;
       &:hover {
-        font-weight: bold;
-        transition: all 700ms ease-in-out;
+        font-weight: bold; 
+        font-size:  1.145rem; 
+        border-radius: 50px;
+        margin: 10px 0;
+        background-color: #cde7ff;
+        transition: all 500ms ease-in;
+        transition: all 500ms ease-out;
 
       }
     }
